# delia

./: .gitattributes  .gitignore  .mcp.json  ADR-009-tool-consolidation.md  CLAUDE.md  CLAUDE.minimal.md  CLEANUP_GUIDE.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_STATUS.md  DELIA_EXPERT.md  FIXES_COMPLETE.md  KNOWN_BUGS.md  LICENSE  MANIFEST.in  MIGRATION.md  Modelfile.delia  PER_PROJECT_FIXES_COMPLETE.md  PER_PROJECT_ISOLATION.md  PHASE_3.2_COMPLETE.md  README.md  REFACTOR_PLAN.md  TOOL_REMOVAL_SUMMARY.md  api.json  architecture.json  auth.py  backend_manager.py  check_logs.py  check_paths.py  claude-mcp.json  coding.json  config.py  debug_intent.py  debugging.json  deployment.json  dispatcher.gbnf  git.json  hello_world.py  leak.err  log  mcp_server.py  (+28 more)
.claude/: INSTRUCTIONS.md
.delia/: evaluation_state.json  learned_patterns.json  project_summary.json  symbol_graph.json
.delia/memories/: ace-component-design.md  ace-enforcement-setup.md  ace-framework-philosophy.md  ace-implementation-principles.md  ace-multi-platform-setup.md  ace-to-delia-rename-plan.md  ace_framework.md  alignment-verification-2025-12-26.md  android-booking-bugs.md  android-calendar-fix.md  android-visual-bugs.md  anthropic-context-engineering.md  architecture.md  back-button-overlap-fixes.md  bottom-navigation-redesign.md  bug-memory-isolation.md  cleanup-backlog.md  codebase-audit-2024-12.md  codebase_analysis_2025_12.md  conventions.md  data-retrieval-improvement-roadmap.md  delia-improvement-analysis.md  delia-vector-optimization-report.md  documentation-research.md  expert_dl_profile.md  fix_chromadb_code_indexing.md  fresh-alignment-audit-2025-12-26.md  full-audit-2025-12-26.md  httpx-migration-complete.md  lsp_enhancement_plan.md  mst-implementation-complete-2024-12.md  nebnet-context-optimization.md  nvidia-toolorchestra.md  quickstart.md  schema-reference.md  serena-research-lessons.md  supabase-security-fixes.md  systematic-analysis-2025-12-26.md  testing-issues-2024-12.md  testing-session-2024-12-24.md  (+5 more)
.delia/playbooks/: agent.json  api.json  architecture.json  coding.json  debugging.json  deployment.json  general.json  git.json  moe.json  orchestration.json  performance.json  project.json  quick.json  review.json  security.json  testing.json  thinking.json
.delia/profiles/: PROFILE_LOADER.md  architecture.md  coding.md  core.md  debugging.md  delia.md  git.md  testing.md
.gemini/: instructions.md
.github/: copilot-instructions.md
.github/workflows/: test.yml
.hypothesis/constants/: 12e3e1a2c0b8e2e4  1dd51f0fd1ea9783  2ad65a0d7dfbd305  5577a4018a3fb361  67b0a8ccf18bf5d2  6993a478a01eb11d  6a7079b2646d1b95  6c0d276a121adc69  a11ef53716f005f0  c15afbd895bc82cf  c3749c421e6d9357  c39daeac07d68d62  d45696b825d503eb  de8749f1712147b2  e358a5d09cedd385  e91a302f81578bef  f1292997036c907a  f67ec75abc4602f4
benchmarks/: __init__.py  hf_runner.py  runner.py  swe_bench_runner.py
benchmarks/tasks/: arc_challenge.yaml  arc_easy.yaml  bigcodebench.yaml  gsm8k.yaml  hellaswag.yaml  humaneval.yaml  mbpp.yaml  mmlu.yaml  truthfulqa.yaml  winogrande.yaml
curato.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dashboard/: next.config.ts  package-lock.json  package.json  test_architectural_awareness.py  visualize_index.py
dashboard/opengl-glass/: Makefile  glass_window  glass_window.c
delia_arch/: hello_delia.py
docs/: ACE_FRAMEWORK_TEMPLATE.md  ADVANCED_ROUTING_IMPLEMENTATION.md  PERFORMANCE_LEARNING_CURVE.md  PROJECT_DOCUMENTATION.md  README.md  TESTING_STRATEGY.md  routing-map.md  spinning_ball.py
docs/adr/: 001-singleton-architecture.md  002-mcp-native-paradigm.md  003-centralized-llm-calling.md  004-structured-error-types.md  005-tot-meta-orchestration.md  006-agent-aware-model-routing.md  007-conversation-compaction.md  008-intrinsics-consolidation.md  009-ast-code-indexing.md  README.md
docs/getting-started/: configuration.md  installation.md  quick-start.md  troubleshooting.md
docs/reference/: architecture.md  cli.md  mcp-config.md
fuzz/: afl_harness.py  run-afl.sh
scripts/: README.md  TOS.md  ace-cursor-hook.sh  ace-enforce-hook.py  ace-task-hook.py  build_dataset.py  convert_to_gguf.py  export_gguf.sh  requirements.txt  run_agent.py  synthetic_examples.json  tools.openai.json  train_lora.py
tests/: conftest.py  e2e_orchestration_test.py  evaluate_dispatcher.py  test_actual_bugs.py  test_api_integration.py  test_auth.py  test_backend_manager.py  test_backend_metrics.py  test_backend_scorer.py  test_bug_hunting.py  test_chain.py  test_chaos_failover.py  test_cli.py  test_coding_tools_hardened.py  test_compaction.py  test_compaction_comprehensive.py  test_concurrency_stress.py  test_config_fuzz.py  test_confirmation_prompts.py  test_context_propagation.py  test_dashboard_api.py  test_discovery_fuzz.py  test_dispatcher_embed.py  test_e2e_chat.py  test_error_handling.py  test_extracted_modules.py  test_failover.py  test_feedback_loop.py  test_first_run.py  test_fuzz_mcp.py  test_fuzz_parser.py  test_fuzz_routing.py  test_fuzz_scorer.py  test_fuzz_security.py  test_fuzz_stateful.py  test_fuzz_stream.py  test_fuzz_voting.py  test_hedging.py  test_http_client_lifecycle.py  test_integration.py  (+35 more)
tools/: add_license_headers.py
tui/: package-lock.json  package.json  test-api.mjs
tui/src/: App.tsx  (+2 more)
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm1d.py  Conv3d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py  unsloth_compiled_module_gemma3.py  unsloth_compiled_module_siglip.py
(+306 files in other folders)
