[project]
name = "delia"
version = "1.0.0"
description = "Local LLM delegation via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [{name = "zbrdc"}]
keywords = ["mcp", "llm", "ollama", "local-ai", "delia", "delegation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "fastmcp>=2.13.3",
    "pygments>=2.18.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "structlog>=24.4.0",
    "aiofiles>=24.1.0",
    "humanize>=4.10.0",
    # Authentication (FastAPI-Users)
    "fastapi-users[oauth,sqlalchemy]>=14.0.0",
    "aiosqlite>=0.20.0",
    "python-jose[cryptography]>=3.5.0",
    "jinja2>=3.1.6",
    "google-generativeai>=0.8.5",
    # Rate limiting
    "limits>=3.13.0",
]

[tool.setuptools.packages.find]
exclude = ["dashboard*", "node_modules*"]

[project.urls]
Repository = "https://github.com/zbrdc/delia"

[project.scripts]
delia = "mcp_server:main"
delia-setup-auth = "setup_auth:main"
